* adds select component

--- a/packages/ui-library/src/components/common/styles/global.module.scss
+++ b/packages/ui-library/src/components/common/styles/global.module.scss
@@ -31,6 +31,7 @@
   --uil-grey: #616161;
   --uil-grey-dark: #a3a3a3;
   --uil-grey-alt: #5c5c5c;
+  --uil-grey-light-alt: rgba(243, 243, 243, .3);
   
   --uil-white-alt: #3a3a3a;
   --uil-white-b: #000000;
