--- a/packages/ui-library/src/components/common/styles/variables.scss
+++ b/packages/ui-library/src/components/common/styles/variables.scss
@@ -13,6 +13,7 @@
   --uil-white-alt: #ffffff;
 
   --uil-grey-light: #f3f3f3;
+  --uil-grey-light-alt: rgba(243, 243, 243, 1);
   --uil-grey: #e9e9e9;
   --uil-grey-alt: #cfcfcf;
   --uil-grey-dark: #757575;
