--- a/packages/ui-library/src/components/input/input.module.scss
+++ b/packages/ui-library/src/components/input/input.module.scss
@@ -106,6 +106,7 @@
       border: none;
       min-height: 2.1875rem;
       box-sizing: content-box;
+      font-size: var(--uil-m);
 
       .legend {
         visibility: hidden;
@@ -121,6 +122,7 @@
       color: var(--uil-black-w);
       opacity: .6;
       transition: top .25s ease;
+      font-size: var(--uil-m);
       
       &.textareaLabel {
         top: var(--uil-m);
